piglit spec/arb_gpu_shader_fp64/execution/built-in-functions/vs-sign-neg-abs.shader_test failure on IVB
/tmp/build_root/m64/lib/piglit/bin/shader_runner /tmp/build_root/m64/lib/piglit/tests/spec/arb_gpu_shader_fp64/execution/built-in-functions/vs-sign-neg-abs.shader_test -auto -fbo
piglit: debug: Requested an OpenGL 3.2 Core Context, and received a matching 4.2 context
Probe color at (1,1)
Expected: 0.000000 1.000000 0.000000
Observed: 0.000000 0.000000 1.000000
Test failure on line 43
Bisected to:
commit b7c47c4f7cfd0513ee2b98179cc22f402e5b3817
Author: Kenneth Graunke <kenneth@whitecape.org>
Date: Sat Apr 18 01:20:42 2020 -0700
intel/compiler: Drop nir_lower_to_source_mods() and related handling.